profile spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ body{
 }
 
 .row {
-    width: 75%;
+    width: 90%;
     height: 100%;
     margin: auto;
     content: "";
@@ -152,8 +152,15 @@ body{
 
 .picture {
     width: 40%;
-    display: flex;
-    justify-content: center;
+}
+
+.propic {
+    width: 100%;
+    max-width: 300px;
+    border-radius: 25%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .info {
@@ -181,12 +188,6 @@ body{
 
 .info a {
     font-weight: 500;
-}
-
-.propic {
-    width: 100%;
-    max-width: 300px;
-    border-radius: 25%;
 }
 
 /* Experience */
@@ -222,7 +223,7 @@ body{
 }
 
 .experience-info-container {
-    margin-left: 32px;
+    margin-left: 24px;
 }
 
 .experience-info {
